--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
 @layer base, component, page;
 
 @import url('./components/base.css');
+@import url('./components/container.css');
+@import url('./components/helpers.css');
+@import url('./components/avatar.css');
+@import url('./components/typography.css');
+@import url('./components/buttons.css');
