--- a/components/form.css
+++ b/components/form.css
@@ -1,36 +1,35 @@
 @layer component {
 	.input {
-		display: block;
-		width: 100%;
 		border: 1px solid var(--light-border-color);
-		border-radius: 4px;
-		padding: 0.813rem;
+		width: 100%;
+		display: block;
+		padding: 13px;
+		border-radius: 3px;
 		margin: 0;
+		/* fixes iOS bug */
 	}
 
 	.input-search {
-		/* Icons are used as decorative images !! */
 		background-image: url('https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608531/learnhtmlcss/my-bank/magnifier.svg');
 		background-position: 5px center;
 		background-repeat: no-repeat;
-		padding-left: 2.2rem;
+		padding-left: 35px;
 		border-radius: 10px;
 	}
 
+	.form-line {
+		margin-bottom: 24px;
+	}
+
 	label {
-		/* Since label is inline, margins won't have effect unless it is made a block level element */
+		margin-bottom: 14px;
 		display: inline-block;
-		margin-bottom: 0.875rem;
 		color: var(--light-text-color);
-		font-size: 0.875rem;
+		font-size: 0.87rem;
 	}
 
 	.form-buttons {
 		display: grid;
 		gap: 15px;
-	}
-
-	.form-line {
-		margin-bottom: 1.5rem;
 	}
 }
