--- a/index.css
+++ b/index.css
@@ -5,4 +5,8 @@
 @import url('./components/helpers.css');
 @import url('./components/avatar.css');
 @import url('./components/typography.css');
+@import url('./components/form.css');
 @import url('./components/buttons.css');
+@import url('./components/entry.css');
+@import url('./components/items.css');
+@import url('./components/slider.css');
