--- a/components/form.css
+++ b/components/form.css
@@ -9,6 +9,23 @@
 		/* fixes iOS bug */
 	}
 
+	.input-fixed-icon {
+		display: flex;
+	}
+
+	.input-fixed-left {
+		padding: 20px;
+		border: 1px solid var(--light-border-color);
+		border-right: 0;
+		border-top-left-radius: 3px;
+		border-bottom-left-radius: 3px;
+	}
+
+	.input-fixed-left+.input {
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
+	}
+
 	.input-search {
 		background-image: url('https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608531/learnhtmlcss/my-bank/magnifier.svg');
 		background-position: 5px center;
