--- a/pages/styles/sigin.css
+++ b/pages/styles/sigin.css
@@ -1,6 +1,6 @@
 @layer page {
 	.recover-password {
-		background-image: url("https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608531/learnhtmlcss/my-bank/lock.svg");
+		background-image: url('https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608531/learnhtmlcss/my-bank/lock.svg');
 		background-repeat: no-repeat;
 		background-position: left center;
 		padding-left: 30px;
@@ -8,7 +8,7 @@
 	}
 
 	.flag-us {
-		background-image: url("https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608529/learnhtmlcss/my-bank/flag-us.svg");
+		background-image: url('https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608529/learnhtmlcss/my-bank/flag-us.svg');
 		background-repeat: no-repeat;
 		background-position: center;
 	}
