--- a/index.css
+++ b/index.css
@@ -12,3 +12,6 @@
 @import url('./components/slider.css');
 @import url('./components/dots.css');
 @import url('./components/header.css');
+@import url('./components/app-header.css');
+@import url('./components/layout.css');
+@import url('./components/nav.css');
