added pills component

--- a/components/layout.css
+++ b/components/layout.css
@@ -1,11 +1,16 @@
 @layer component {
-    #layout-page-overlay {
-        background-color: white;
-        margin-top: -16px;
-        border-top-right-radius: 16px;
-        border-top-left-radius: 16px;
-        padding-top: 10px;
-        /* you can also explicitly create a stacking context or use position: relative;
+  #layout-page-overlay {
+    background-color: white;
+    margin-top: -16px;
+    border-top-right-radius: 16px;
+    border-top-left-radius: 16px;
+    padding-top: 10px;
+    /* you can also explicitly create a stacking context or use position: relative;
       z-index: 1; or we'll do that later in the profile page */
-    }
+  }
+
+  .layout-timestamp {
+    margin-top: 12px;
+    margin-bottom: 0px;
+  }
 }
