--- a/index.css
+++ b/index.css
@@ -15,3 +15,4 @@
 @import url('./components/app-header.css');
 @import url('./components/layout.css');
 @import url('./components/nav.css');
+@import url('./components/pills.css');
