--- a/index.css
+++ b/index.css
@@ -16,3 +16,5 @@
 @import url('./components/layout.css');
 @import url('./components/nav.css');
 @import url('./components/pills.css');
+@import url('./components/actions.css');
+@import url('./components/cards.css');
