--- a/components/layout.css
+++ b/components/layout.css
@@ -14,6 +14,11 @@
     margin-bottom: 0px;
   }
 
+
+  .layout-timestamp:first-of-type {
+    margin-top: 0px;
+  }
+
   .layout-subpage {
     display: flex;
     justify-content: space-between;
